Section-03-single-server-to-cluster-weberver-asg-alb/02-deploy-single-web-server/securitygroups.tf
resource "aws_security_group" "webserver_sg" { 

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = [ "73.241.51.131/32"]
    }

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = [ "73.241.51.131/32"]
    }
egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }    
}
